# sdl

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: release.yml
src/: chrome.rs  cli.rs  dirs.rs  download.rs  ffmpeg.rs  lib.rs  logger.rs  main.rs  mpv.rs  utils.rs
src/downloaders/: aniwave.rs  aniworldserienstream.rs  mod.rs
src/extractors/: doodstream.rs  dummy.rs  filemoon.rs  loadx.rs  mod.rs  speedfiles.rs  streamtape.rs  vidmoly.rs  vidoza.rs  vidplay.rs  voe.rs
