[package]
name = "sdl"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Funami580/sdl"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.6", features = ["derive", "cargo"] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = "0.1.14"
futures-util = "0.3.28"
thirtyfour = "0.32.0-rc.8"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", tag = "selenium-4.14.0" }
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls-native-roots", "stream", "gzip", "json"] }
reqwest-partial-retry = "0.1.0"
reqwest-retry = "0.3.0"
serde_json = "1.0.107"
bytes = "1.5.0"
url = "2.4.1"
form_urlencoded = "1.2.0"
m3u8-rs = "5.0.4"
dirs = "5.0.1"
zip-extensions = "0.6.2"
async-compression = { version = "0.4.4", features = ["tokio", "gzip"] }
pathsearch = "0.2.0"
portpicker = "0.1.1"
rand = "0.8.5"
regex = "1.10.2"
once_cell = "1.18.0"
enum_dispatch = "0.3.12"
enum-iterator = "1.4.1"
indicatif = "0.17.7"
number_prefix = "0.4.0"
rust-lapper = "1.1.0"
console = "0.15.7"
log = "0.4.20"
env_logger = "0.10.0"
chrono = "0.4.31"
anyhow = "1.0.75"

[[bin]]
name = "sdl"
path = "src/main.rs"

[lib]
name = "sdl"
path = "src/lib.rs"

[profile.release]
lto = true
