[package]
name = "sdl"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
readme = "README.md"
repository = "https://github.com/Funami580/sdl"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
tokio = { version = "1.33", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
thirtyfour = "0.32.0-rc.8"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", tag = "selenium-4.14.0" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "stream", "gzip", "json"] }
reqwest-partial-retry = "0.1"
reqwest-retry = "0.3"
reqwest-middleware = "0.2"
hyper = "1.0"
serde_json = "1.0"
bytes = "1.5"
url = "2.4"
form_urlencoded = "1.2"
m3u8-rs = "5.0"
dirs = "5.0"
zip-extensions = "0.6"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
pathsearch = "0.2"
portpicker = "0.1"
interprocess = { version = "1.2", features = ["tokio_support"] }
rand = "0.8"
regex = "1.10"
once_cell = "1.18"
enum_dispatch = "0.3"
enum-iterator = "1.4"
indicatif = "0.17"
number_prefix = "0.4"
rust-lapper = "1.1"
console = "0.15"
bitmask-enum = "2.2"
arc4 = "0.1"
base64 = "0.21"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"

[[bin]]
name = "sdl"
path = "src/main.rs"

[lib]
name = "sdl"
path = "src/lib.rs"

[profile.release]
lto = true
